--- a/src/main/webapp/css/vet.css
+++ b/src/main/webapp/css/vet.css
@@ -3,6 +3,7 @@ body{
     color: aliceblue;
     background-size:100%;
     background-repeat: no-repeat;
+
 }
 
 header{
@@ -12,3 +13,7 @@ header{
     font-weight: bold ;
     font-family: "Times New Roman", serif;
 }
+table{
+
+}
+
