--- a/src/main/webapp/css/official.css
+++ b/src/main/webapp/css/official.css
@@ -1,6 +1,6 @@
 body{
     background-image: url("official.jpg");
-    color: aliceblue;
+    color: #020202;
     background-size:100%;
     background-repeat: no-repeat;
     alignment: center;
